; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_x_tables.c_xt_unregister_targets.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_x_tables.c_xt_unregister_targets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xt_target = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xt_unregister_targets(%struct.xt_target* %0, i32 %1) #0 {
  %3 = alloca %struct.xt_target*, align 8
  %4 = alloca i32, align 4
  store %struct.xt_target* %0, %struct.xt_target** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %9, %2
  %6 = load i32, i32* %4, align 4
  %7 = add i32 %6, -1
  store i32 %7, i32* %4, align 4
  %8 = icmp ugt i32 %6, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %5
  %10 = load %struct.xt_target*, %struct.xt_target** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.xt_target, %struct.xt_target* %10, i64 %12
  %14 = call i32 @xt_unregister_target(%struct.xt_target* %13)
  br label %5

15:                                               ; preds = %5
  ret void
}

declare dso_local i32 @xt_unregister_target(%struct.xt_target*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
